Update baseHref and asset URLs for GitHub Pages
Set baseHref in angular.json for deployment to GitHub Pages. Updated favicon and social sharing image URLs in index.html to use raw GitHub links. Changed internal links in hero and CTA sections to relative paths for compatibility with GitHub Pages hosting.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png" />
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MatheusChiodi/MChiodi-GuitarTuner/refs/heads/main/src/logo.png" />
 
     <!-- Pré-carregamento de fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,7 +34,6 @@
       rel="stylesheet"
     />
 
-    <!-- Tailwind CDN (caso não use build local) -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Open Graph para compartilhamento em redes sociais -->
@@ -44,8 +43,8 @@
       content="Afine sua guitarra de forma rápida, precisa e gratuita com o MChiodi GuitarTuner."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mchiodi-guitartuner.vercel.app/" />
-    <meta property="og:image" content="https://mchiodi-guitartuner.vercel.app/banner.png" />
+    <meta property="og:url" content="https://matheuschiodi.github.io/MChiodi-GuitarTuner/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/MatheusChiodi/MChiodi-GuitarTuner/refs/heads/main/src/banner.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -54,7 +53,7 @@
       name="twitter:description"
       content="Afine sua guitarra com precisão. Rápido, intuitivo e gratuito!"
     />
-    <meta name="twitter:image" content="https://mchiodi-guitartuner.vercel.app/banner.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/MatheusChiodi/MChiodi-GuitarTuner/refs/heads/main/src/banner.png" />
   </head>
 
   <body>
